--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ chromadb>=0.4.0
 
 # UI
 streamlit>=1.28.0
+rich>=13.7.0  # Terminal UI with colors and formatting
 
 # API (optional)
 fastapi>=0.104.0
